# Prototyp

./: Auswertung RSRP.R  Auswertung.R  DrawIO_Messung.xml  Multiple_boxlots.m  Multiple_boxlots_1.m  Multiple_boxlots_2.m  Problems   Prototyp_Präsentation.pptx  README.md
Archiv/EchoTool/: echo_client.py  echo_server.py
Auswertung/: Auswertung.R  Bandbreite_script.R  Delay_Download_Plot.R  PacketlossECDF.R  Signalstärke_Plot.R  Synchronitaetstest_script.R
Auswertung/Signalstärke/: Anleitung.txt  Signalstaerke.py  modem.sh  output.txt
Auswertungstool/: ArrivalDepartureExtractor.py  BandwithParser.py  CoordinateExtractor.py  Datenanpasser.py  MapAntennaExtractor.py  MapAttributeExtractor.py
Auswertungstool/Datenanpasser/: Datenanpasser.py
Auswertungstool/PcapReader/: BandwithParser.py  CMakeLists.txt  main.cpp
Bilder/: Aktivitätendiagramm Messtool.xml
Dominic_Tests/BandbreiteMesstool/: Client.py  Server.py
Dominic_Tests/GesamtTool/: client.py  server.py
GPS/: Aufruf  gpsreader.py  rgm3800-rev25.py
GUI/: Readme
GUI/Example_Prototype/: NetemEmulator
GUI/NetemEmulator/: NetemEmulator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Messtool/: CMakeLists.txt  Client.py  Server.py  cleanUp4Measurement.sh  install_measurement_libs.sh
Messtool/Client/: CMakeLists.txt  PcapWriter.cpp  PcapWriter.h  client.cpp  client.h  main.cpp
Messtool/MeasureBandwidth/: netperfBandwidth.cpp  netperfBandwidth.h  packetPairBandwidth.cpp
Messtool/MeasureSignalstrength/: measureSignalStrength.cpp  measureSignalstrength.h
Messtool/MobileBandwidthTool/: 2018-12-05_13_11_42_627687_Train_MS_OS_Client_Bandwidth_Timestamps.txt  2018-12-05_13_14_42_609390_Train_MS_OS_Client_Bandwidth_Timestamps.txt  Client.py  Server.py
Messtool/MobileMeasurementTool/: Checklist_MobileMessung  Client.py  Client_non_Ntp_3GPS.py  Server.py  gps_Website zur Erklärung der Koordinaten Formate  gpsreader.py
Messtool/MobileMesurementTool/: Client.py  Server.py  ntp.txt
Messtool/PcapReader/: main.cpp
Messtool/PcapWriter/: CMakeLists.txt  PcapWriter.cpp  PcapWriter.h  main.cpp  measureBandwidth.cpp
Messtool/PcapWriterPY/: PcapWriter.py  Server.py  runner.py  simpleClient.py
Messtool/Server/: CMakeLists.txt  server.cpp  server.h
Messtool/StationaryMeasurementTool/: Server.py
Messtool/consts_and_utils/: consts_and_utils.cpp  consts_and_utils.h
Messtool/generateLoad/: generateLoad.cpp  generateLoad.h
Messtool/packetpair/: packetPairBandwidth.h  packetpair_client_backup.cpp  packetpair_server_backup.cpp
PacketlossAuswertung/: CMakeLists.txt
PacketlossAuswertung/R-Skripte/: Boxplots-Kolmogorov.R  Boxplots-LeastSquares.R  ECDF-Klassisch.R
PacketlossAuswertung/include/: Generator.h  SmallestQuadrats.h  io.h  paramCalculator.h  sage.h  statistsics.h
PacketlossAuswertung/src/: Generator.cpp  SmallestQuadrats.cpp  io.cpp  main.cpp  paramCalculator.cpp  sage.cpp  statistsics.cpp
Präsentationen/: Prototyp_Präsentation.pptx  Präsentation.pptx  Präsi_Vorlage.pptx
SagemathBaumWelch/: CMakeLists.txt  SageBaumWelch.py  main.py  starter.cpp
Tests/: CMakeLists.txt  Tool_GilbertElliot_20_70_95_3.txt  main.cpp
Tool1/GUI/: TraceGenerator.pro
Tool1/ModelParameteriser/: CMakeLists.txt  SageBaumWelch.py  TraceGenerator.cpp  main.cpp
Tool1/ModelParameteriser/Packetloss/: PacketLossModelType.h
Tool1/ModelParameteriser/Packetloss/PaketlossModel/: GilbertElliotModel.cpp  MarkovModel.h
Tool1/ModelParameteriser/PcapParser/: PcapParser.h
Tool1/ModelParameteriser/Traces/01_22_OS_to_MS/: clientIp.txt
Tool1/Pingparser/: CMakeLists.txt  Makefile  Pingparser  main.cpp  ping.pcap  ping.txt  tcp aufbau
Tool1/TraceGenerator/: CMakeLists.txt  ClassDiagramm.puml  HMM.cpp  HMM.h  PacketLossToParameterParser.cpp  PacketLossToParameterParser.h  Pingparser.cpp  Pingparser.h  RFC link  RealTraceParser.cpp  RealTraceParser.h  TraceGenerator.cpp  TraceGenerator.h  TraceSaver.cpp  TraceSaver.h  main.cpp
Tool1/TraceGenerator/Packetloss/PacketlossParameterParser/: BernoulliParser.cpp  BernoulliParser.h  BruteForceParser.cpp  BruteForceParser.h  GilbertElliotParser.cpp  GilbertElliotParser.h  GilbertParser.cpp  GilbertParser.h  MarkovParser.cpp  MarkovParser.h  PacketLossToParameterParser.cpp  PacketLossToParameterParser.h  SimpleGilbertParser.cpp  SimpleGilbertParser.h
Tool1/TraceGenerator/Packetloss/PaketlossModel/: BasePacketlossModel.cpp  BasePacketlossModel.h  GilbertElliotModel.cpp  GilbertElliotModel.h  MarkovModel.cpp  MarkovModel.h
Tool1/TraceGenerator/PacketlossParameterParser/: BernoulliParser.cpp  BernoulliParser.h  BruteForceParser.cpp  BruteForceParser.h  GilbertElliotParser.cpp  GilbertElliotParser.h  GilbertParser.cpp  GilbertParser.h  MarkovParser.cpp  MarkovParser.h  SimpleGilbertParser.cpp  SimpleGilbertParser.h
Tool1/TraceGenerator/PaketlossModel/: BasePacketlossModel.cpp  BasePacketlossModel.h  GilbertElliot.cpp  GilbertElliot.h  GilbertElliotModel.cpp  GilbertElliotModel.h  MarkovModel.cpp  MarkovModel.h  PacketlossModel.cpp  PacketlossModel.h
Tool1/TraceGenerator/PcapParser/: PcapParser.cpp  PcapParser.h  PcapValues.h  Result.h  ResultPoint.h  SignalStrength.h
Tool1/TraceGenerator/Traces/01_22_MS_to_OS/: clientIp.txt
Tool1/Validationtool/: CMakeLists.txt  ModelValidation.xlsx  extract_Validation.ods  validationtool.cpp
Tool1/build-TraceGenerator-Desktop-Debug/: Makefile  TraceGenerator  moc_mainwindow.cpp
Tool2/: Bidirectional_Activity_Diagramm.xml  CMakeLists.txt  Einrichten_Anleitung  TODO  pkt_sched.h  q_netem.c  sch_netem.c
Tool2/GUI/: mainwindow.h
Tool2/TraceGenerator/: CMakeLists.txt  TraceGenerator.cpp  TraceGenerator.h  TraceGenerator.pro  TraceSaver.h  mainwindow.cpp  mainwindow.ui
Tool2/TraceGenerator/PaketlossModel/: GilbertElliot.cpp  GilbertElliot.h  MarkovModel.cpp  MarkovModel.h  PacketlossModel.cpp  PacketlossModel.h  PaketlossModelType.h  TraceSaver.cpp
Tool2/build-TraceGenerator-Desktop-Debug/: ui_mainwindow.h
Tool2/iproute2_4_18/: pkt_sched.h  q_netem.c
UDP_TCP_QUIC_Validation/: tester.py
WetterGrabber/: WeatherGrabber.py
(+59 files in other folders)
