cmake_minimum_required(VERSION 3.5)
project(Messtool)
set(CMAKE_CXX_STANDARD 14)
include(FindPCAP.cmake)
include_directories(../consts_and_utils)
include_directories(../generateLoad)
include_directories(../MeasureBandwidth)
include_directories(../PcapWriter)
find_package(Threads)
set(CMAKE_CXX_FLAGS -pthread)

set(SOURCE_FILES client.cpp ../consts_and_utils/consts_and_utils.cpp ../consts_and_utils/consts_and_utils.h ../generateLoad/generateLoad.cpp ../generateLoad/generateLoad.h ../MeasureBandwidth/netperfBandwidth.cpp ../MeasureBandwidth/netperfBandwidth.h ../PcapWriter/PcapWriter.cpp ../PcapWriter/PcapWriter.h)
add_executable(Client ${SOURCE_FILES})
target_link_libraries(Client ${PCAP_LIBRARY})