cmake_minimum_required(VERSION 3.5)
project(TraceGenerator)
set(CMAKE_CXX_STANDARD 11)
include(FindPCAP.cmake)
set(SOURCE_FILES main.cpp PaketlossModel/BasePacketlossModel.cpp PaketlossModel/BasePacketlossModel.h PaketlossModel/MarkovModel.cpp PaketlossModel/MarkovModel.h TraceGenerator.cpp TraceGenerator.h PaketlossModel/GilbertElliotModel.cpp PaketlossModel/GilbertElliotModel.h TraceSaver.cpp TraceSaver.h PacketlossParameterParser/PacketLossToParameterParser.cpp PacketlossParameterParser/PacketLossToParameterParser.h Pingparser.cpp Pingparser.h PacketlossParameterParser/GilbertElliotParser.cpp PacketlossParameterParser/GilbertElliotParser.h PacketlossParameterParser/GilbertParser.cpp PacketlossParameterParser/GilbertParser.h PacketlossParameterParser/SimpleGilbertParser.cpp PacketlossParameterParser/SimpleGilbertParser.h PacketlossParameterParser/BernoulliParser.cpp PacketlossParameterParser/BernoulliParser.h PacketlossParameterParser/MarkovParser.cpp PacketlossParameterParser/MarkovParser.h PacketlossParameterParser/BruteForceParser.cpp PacketlossParameterParser/BruteForceParser.h)

add_executable(TraceGenerator ${SOURCE_FILES})
target_link_libraries(TraceGenerator ${PCAP_LIBRARY})